--- a/30_sources/SRC_Zupfnoter/index_opal.html.erb
+++ b/30_sources/SRC_Zupfnoter/index_opal.html.erb
@@ -150,7 +150,16 @@
           type: 'html',
           html: '<div style="padding: 5px; background-color: #f0f0f0;;"><span id="tbCoords" style="margin-top: 5px;"></span></div>'
         },
+
         {type: 'spacer'},
+
+        {
+          type: 'menu', text: "config", id: 'config', icon: 'fa fa-gear', items: [
+          {text: 'title'}, {text: 'voices'}, {text: 'flowlines'},
+          {text: 'layoutlines'}, {text: 'jumplines'}, {text: 'synchlines'}, {text: 'legend'}, {text: 'notes'}, {text: 'lyrics'},
+          {text: 'nonflowrest'}, {text: 'startpos'}, {text: 'subflowlines'}, {text: 'produce'}]
+        },
+
         {type: 'break'},
         {type: 'button', id: 'tbPrintA3', text: 'A3', icon: 'fa fa-file-pdf-o', hint: 'Print PDF A3'},
         {type: 'button', id: 'tbPrintA4', text: 'A4', icon: 'fa fa-file-pdf-o', hint: 'Print PDF A4'},
@@ -194,7 +203,9 @@
           if (event.subItem) {
             event.item.text = event.subItem.text
           }
-
+        }
+        if (event.target.split(":")[0] == 'config') {
+          uicontroller.$handle_command("addconf " + event.target.split(":")[1])
         }
       }
     }
