integrated abc2svg_json some refactoring

--- a/30_sources/SRC_Zupfnoter/index_opal.html.erb
+++ b/30_sources/SRC_Zupfnoter/index_opal.html.erb
@@ -27,6 +27,7 @@
   <script src="vendor/abc2svg-1.js" type="application/javascript"></script>
   <script src="vendor/abc2svg_play-1.js" type="application/javascript"></script>
   <script src="vendor/abc2svg_midi-1.js" type="application/javascript"></script>
+  <script src="vendor/abc2svg_json-1.js" type="application/javascript"></script>
   <script src="vendor/xml2abc-bw.js" type="application/javascript"></script>
 
 
