--- a/30_sources/SRC_Zupfnoter/index_opal.html.erb
+++ b/30_sources/SRC_Zupfnoter/index_opal.html.erb
@@ -79,7 +79,7 @@
 </div>
 <script type="text/javascript">
 
-  function check_unload(){
+  function check_unload() {
     return "Zupfnoter verlassen? echt jetzt ...?"
   }
 
@@ -254,10 +254,23 @@
         {type: 'spacer'},
 
         {
-          type: 'menu', text: "sheet config", id: 'config', icon: 'fa fa-gear', items: [
-          {text: 'title'}, {text: 'voices'}, {text: 'flowlines'},
-          {text: 'layoutlines'}, {text: 'jumplines'}, {text: 'synchlines'}, {text: 'legend'}, {text: 'notes'}, {text: 'lyrics'},
-          {text: 'nonflowrest'}, {text: 'startpos'}, {text: 'subflowlines'}, {text: 'produce'}]
+          type: 'menu', text: "sheet config", id: 'config', icon: 'fa fa-gear',
+          items: [
+            {text: 'title'}, {text: 'voices'},
+            {text: 'flowlines'},
+            {text: 'layoutlines'},
+            {text: 'jumplines'},
+            {text: 'synchlines'},
+            {text: 'legend'},
+            {text: 'notes'},
+            {text: 'lyrics'},
+            {text: 'nonflowrest'},
+            {text: 'startpos'},
+            {text: 'subflowlines'},
+            {text: 'produce'},
+            {text: 'layout'},
+            {text: 'xx'},
+          ]
         },
 
         {type: 'break'},
