draggable text is now indicated by a "hand" cursor

--- a/30_sources/SRC_Zupfnoter/public/index.css
+++ b/30_sources/SRC_Zupfnoter/public/index.css
@@ -44,6 +44,9 @@ table {
   border-collapse: collapse;
   border-spacing: 0; }
 
+.zn_draggable {
+  cursor: pointer; }
+
 .w2ui-tb-caption {
   vertical-align: middle; }
 
