#21 Full support for countnotes:
* configure by "extract.0.countnotes, for example:
  ` "countnotes" : {"voices": [1], "pos": [3, -2]},`
* notes can be fine-tuned by drag & drop
* count by denominator of current measure

--- a/30_sources/SRC_Zupfnoter/index_opal.html.erb
+++ b/30_sources/SRC_Zupfnoter/index_opal.html.erb
@@ -269,6 +269,7 @@
             {text: 'subflowlines'},
             {text: 'produce'},
             {text: 'layout'},
+            {text: 'countnotes'},
             {text: 'xx'},
           ]
         },
