#25 config menu no longer overrides entries in the Sheet with the default values

--- a/30_sources/SRC_Zupfnoter/index_opal.html.erb
+++ b/30_sources/SRC_Zupfnoter/index_opal.html.erb
@@ -238,6 +238,7 @@
             {text: 'startpos'},
             {text: 'subflowlines'},
             {text: 'produce'},
+            {text: 'annotations'},
             {text: 'layout'},
             {text: 'countnotes'},
             {text: 'xx'},
