--- a/30_sources/SRC_Zupfnoter/index_opal.html.erb
+++ b/30_sources/SRC_Zupfnoter/index_opal.html.erb
@@ -174,6 +174,10 @@
         uicontroller.$handle_command("dsave")
       },
 
+      'tb_download': function() {
+        uicontroller.$handle_command("download_abc")
+      },
+
       'tb_login': function () {
         openPopup({
           name: 'loginForm',
@@ -208,9 +212,10 @@
       items: [
         {type: 'button', id: 'tb_home', icon: 'fa fa-home', text: '<span id="lbZupfnoter">Zupfnoter</span>'},
         {type: 'html', html: '<div style="width:25px"/>'},
-        {type: 'button', id: 'tb_login', text: 'login', icon: 'fa fa-sign-in', hint: 'Open in dropboxx'},
         {type: 'button', id: 'tb_create', text: 'create', icon: 'fa fa-plus-square-o', hint: 'Open in dropboxx'},
-        {type: 'button', id: 'tb_open', text: 'open', icon: 'fa fa-folder', hint: 'Open in dropboxx'},
+        {type: 'button', id: 'tb_download', text: 'dl abc', icon: 'fa fa-save', hint: 'Save in dropbox'},
+        {type: 'button', id: 'tb_login', text: 'login', icon: 'fa fa-dropbox', hint: 'Open in dropboxx'},
+        {type: 'button', id: 'tb_open', text: 'open', icon: 'fa fa-dropbox', hint: 'Open in dropboxx'},
         {type: 'button', id: 'tb_save', text: 'save', icon: 'fa fa-dropbox', hint: 'Save in dropbox'},
         {
           type: 'html',
