--- a/30_sources/SRC_Zupfnoter/index_opal.html.erb
+++ b/30_sources/SRC_Zupfnoter/index_opal.html.erb
@@ -6,7 +6,9 @@
   <link rel="stylesheet" type="text/css" href="public/index.css"/>
   <link rel="shortcut icon" href="public/icons/favicon.gif"/>
 
-  <script src="vendor/jquery-1.11.1.min.js" type="application/javascript"></script>
+  <script src="vendor/jquery-3.0.0.min.js" type="application/javascript"></script>
+  <script src="vendor/jquery-migrate-1.4.1.min.js" type="application/javascript"></script>
+
   <script src="vendor/ace/ace.js" type="application/javascript" charset="utf-8"></script>
   <script src="vendor/ace/ext-language_tools.js" type="application/javascript" charset="utf-8"></script>
 
@@ -414,10 +416,10 @@
       height: 300,
       showMax: true,
       onToggle: function (event) {
-        $(w2ui.foo.box).hide();
+        $(w2ui[theForm.name].box).hide();
         event.onComplete = function () {
-          $(w2ui.foo.box).show();
-          w2ui.foo.resize();
+          $(w2ui[theForm.name].box).show();
+          w2ui[theForm.name].resize();
         }
       },
       onOpen: function (event) {
