--- a/30_sources/SRC_Zupfnoter/index_opal.html.erb
+++ b/30_sources/SRC_Zupfnoter/index_opal.html.erb
@@ -4,7 +4,7 @@
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
   <title>Zupfnoter</title>
   <link rel="stylesheet" type="text/css" href="public/index.css"/>
-  <link rel="shortcut icon" href="public/icons/favicon.gif"/>
+  <link rel="shortcut icon" href="public/icons/favicon.png"/>
 
   <script src="vendor/jquery-3.0.0.min.js" type="application/javascript"></script>
   <script src="vendor/jquery-migrate-1.4.1.min.js" type="application/javascript"></script>
