#18 now print a scalar

--- a/30_sources/SRC_Zupfnoter/index_opal.html.erb
+++ b/30_sources/SRC_Zupfnoter/index_opal.html.erb
@@ -248,6 +248,8 @@
             {text: 'annotations'},
             {text: 'layout'},
             {text: 'countnotes'},
+            {text: 'scalebar'},
+            {text: 'scalebar.vpos'},
             {text: 'xx'},
           ]
         },
