#36 now support repeaters

--- a/30_sources/SRC_Zupfnoter/index_opal.html.erb
+++ b/30_sources/SRC_Zupfnoter/index_opal.html.erb
@@ -237,6 +237,8 @@
             {text: 'flowlines'},
             {text: 'layoutlines'},
             {text: 'jumplines'},
+            {text: 'repeatbars'},
+            {text: 'repeatbars.voices'},
             {text: 'synchlines'},
             {text: 'legend'},
             {text: 'notes'},
