--- a/30_sources/SRC_Zupfnoter/index_opal.html.erb
+++ b/30_sources/SRC_Zupfnoter/index_opal.html.erb
@@ -237,8 +237,8 @@
             {text: 'flowlines'},
             {text: 'layoutlines'},
             {text: 'jumplines'},
-            {text: 'repeatbars'},
-            {text: 'repeatbars.voices'},
+            {text: 'repeatsigns'},
+            {text: 'repeatsigns.full'},
             {text: 'synchlines'},
             {text: 'legend'},
             {text: 'notes'},
@@ -251,7 +251,7 @@
             {text: 'layout'},
             {text: 'countnotes'},
             {text: 'stringnames'},
-            {text: 'stringnames.vpos'},
+            {text: 'stringnames.full'},
             {text: 'xx'},
           ]
         },
